--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script src="lib/www/lib/lodash/lodash.min.js"></script>
     <script src="lib/www/lib/jquery/dist/jquery.min.js"></script>
     <script src="lib/www/lib/string/lib/string.min.js"></script>
+    <script src="lib/www/lib/async/lib/async.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -29,8 +30,8 @@
 
     <script src="js/app/lib/controllers/app.manga.list.js"></script>
 
-
     <script src="js/app/lib/services/app.manga.list.js"></script>
+    <script src="js/app/lib/services/handler/komikid.js"></script>
 
   </head>
   <body ng-app="app">
